Fixing packages page white space at top above nav bar

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 #product-overview {
-  background: url("./Images/freedom.jpg");
+  background: url("freedom.jpg");
   width: 100%;
   height: 528px;
   padding: 10px;
@@ -8,6 +8,11 @@
 .section-title {
   color: #2ddf5c;
   text-align: center;
+}
+
+#product-overview h1 {
+  color: white;
+  font-family: "Anton", sans-serif;
 }
 
 .plan__list {
@@ -26,7 +31,7 @@
   vertical-align: middle;
 }
 
-.plan-highlighted {
+.plan--highlighted {
   background: #19b84c;
   color: white;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
@@ -48,11 +53,11 @@
   color: #858585;
 }
 
-.plan-highlighted .plan__title {
+.plan--highlighted .plan__title {
   color: white;
 }
 
-.plan-highlighted .plan__price {
+.plan--highlighted .plan__price {
   color: #0e4f1f;
 }
 
@@ -62,8 +67,8 @@
   padding: 0;
 }
 
-.plan__features li {
-  margin: 8px 0px;
+.plan__feature {
+  margin: 8px 0;
 }
 
 #key-features {
@@ -90,13 +95,6 @@
   vertical-align: top;
 }
 
-.key-feature__description {
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  font-size: 20px;
-}
-
 .key-feature__image {
   background: #ffcede;
   width: 128px;
@@ -106,7 +104,13 @@
   margin: auto;
 }
 
-#product-overview h1 {
+.key-feature__description {
+  text-align: center;
+  font-weight: bold;
   color: white;
-  font-family: "Anton", sans-serif;
+  font-size: 20px;
 }
+
+/* h1 {
+  font-family: sans-serif;
+} */
