--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,10 +1,10 @@
-.main {
+main {
   padding-top: 32px;
 }
 
 .package {
   width: 80%;
-  margin: 16px 0px;
+  margin: 16px 0;
   border: 4px solid #0e4f1f;
   border-left: none;
 }
@@ -13,6 +13,7 @@
 .package:active {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   border-color: #ff5454;
+  /* border-color: #ff5454 !important; */
 }
 
 .package a {
@@ -21,13 +22,14 @@
   display: block;
   padding: 32px;
 }
+
 .package__subtitle {
   color: #979797;
 }
 
 .package__info {
   padding: 16px;
-  border: 2px solid #0e4f1f;
+  border: 1px solid #0e4f1f;
   font-size: 20px;
   color: #0e4f1f;
   background: white;
@@ -46,11 +48,12 @@
   float: right;
   border-right: none;
   border-left: 4px solid #0e4f1f;
+  text-align: right;
 }
 
 #free:hover,
 #free:active {
-  border-color: #ff5454;
+  border-left-color: #ff5454;
 }
 
 #premium {
@@ -61,6 +64,6 @@
   color: white;
 }
 
-#premium .package__title {
+#premium .package__subtitle {
   color: #bbb;
 }
